--- a/Assets/style.css
+++ b/Assets/style.css
@@ -13,6 +13,32 @@ header{
 }
 
 main{
-    margin: auto;
+    margin: auto; 
     max-width: 80%;
+    text-align: left;
+}
+
+h1{
+    font-size: 40px;
+    padding-bottom: 1px;
+    margin-bottom: 1px;
+}
+
+#name{
+    color: aqua;
+}
+
+#space{
+    line-height: 3px;
+}
+
+#date{
+    font-size: 11px;
+    margin-bottom: 20px;
+}
+
+.description{
+    margin-top: 1px;
+    margin-bottom: 1px;
+    font-size: 10px;
 }
