--- a/Assets/style.css
+++ b/Assets/style.css
@@ -42,3 +42,13 @@ h1{
     margin-bottom: 1px;
     font-size: 10px;
 }
+
+#text{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+li{
+    margin-left: -1em;
+   
+}
